--- a/ci/build.yml
+++ b/ci/build.yml
@@ -19,4 +19,4 @@ run:
     ls
     cd demo1Spring
     mvn package
-    cp ./target/demo1spring-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
+    cp ./target/demo-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
