--- a/ci/build.yml
+++ b/ci/build.yml
@@ -19,5 +19,5 @@ run:
   - |
     ls
     cd demo1Spring
-    mvn package
+    ./mvnw package
     cp ./target/demo-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
