--- a/ci/build.yml
+++ b/ci/build.yml
@@ -18,6 +18,7 @@ run:
   - -exc
   - |
     ls
+    chmod a+x /usr/local/apache-maven/apache-maven-3.1.1/bin/mvn
     cd demo1Spring
     ./mvnw package
     cp ./target/demo-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
