--- a/ci/build.yml
+++ b/ci/build.yml
@@ -18,7 +18,7 @@ run:
   - -exc
   - |
     ls
-    chmod a+x demo1Spring/./mvnw
+    chmod +x demo1Spring/mvnw
     cd demo1Spring
     ./mvnw package
     cp ./target/demo-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
