--- a/ci/build.yml
+++ b/ci/build.yml
@@ -3,8 +3,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: java
-    tag: "8"
+    repository: patrickcrocker/maven-resource
+    tag: "latest"
 
 inputs:
 - name: demo1Spring
@@ -18,8 +18,6 @@ run:
   - -exc
   - |
     ls
-    chmod +x demo1Spring/mvnw
-    ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     cd demo1Spring
     ls
     ./mvnw package
