--- a/ci/build.yml
+++ b/ci/build.yml
@@ -18,8 +18,8 @@ run:
   - -exc
   - |
     ls
+    docker run mvn clean install
     chmod +x demo1Spring/mvnw
-    cd demo1Spring
     ls
     ./mvnw package
     cp ./target/demo-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
