--- a/ci/build.yml
+++ b/ci/build.yml
@@ -3,8 +3,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: java
-    tag: "8"
+    repository: openjdk
+    tag: "8-jdk-alpine"
 
 inputs:
 - name: demo1Spring
@@ -17,9 +17,6 @@ run:
   args:
   - -exc
   - |
-    ls
-    sudo apt-get install maven
-    chmod +x demo1Spring/mvnw
     ls
     ./mvnw package
     cp ./target/demo-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
