--- a/ci/build.yml
+++ b/ci/build.yml
@@ -18,5 +18,5 @@ run:
   - -exc
   - |
     ls
-    ./mvnw package
+    mvn package
     cp ./target/demo-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
