--- a/ci/build.yml
+++ b/ci/build.yml
@@ -17,6 +17,6 @@ run:
   args:
   - -exc
   - |
-    ls
+    cd demo1Spring
     mvn package
     cp ./target/demo-0.0.1-SNAPSHOT.jar ../built-project/demo.jar
