--- a/ci/build.yml
+++ b/ci/build.yml
@@ -4,7 +4,7 @@ image_resource:
   type: docker-image
   source:
     repository: maven
-    tag: "latest"
+    tag: "alpine"
 
 inputs:
 - name: demo1Spring
